--- a/test.html
+++ b/test.html
@@ -27,9 +27,12 @@
             <div class="col-12">
                 <section class="callout jumbotron text-center">
                     <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>Free first order!</mark></strong></p>
-                    <p class="text-muted"><small>You must be 18 or over to sign up for our service. Please drink responsibly.</small></p>
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                        <s class="d-none d-sm-inline">£19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>Free first order!</mark></strong></p>
                     <button class="btn btn-success btn-lg">Sign Up!</button>
+                    <p class="text-muted"><small>You must be 18 or over to sign up for our service. Please drink responsibly.</small></p>
                 </section>
             </div>
         </div>
@@ -38,7 +41,7 @@
     <!--Quotes-->    
         <section class="quotes">
             <div class="row">
-                <div class="col-12">  
+                <div class="col-12 my-5">  
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>  
             </div>
@@ -62,7 +65,7 @@
     <!--Features-->
         <section class="feature">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 my-5">
                     <h2 class="text-uppercase">Features:</h2>
                 </div>
             </div>
@@ -91,6 +94,39 @@
             </div>
         </section>
     <!--/features-->
+        <section>
+            <h2>Monthly favourites</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Origin</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">McOwski</th>
+                        <td>Poland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Hibiki</th>
+                        <td>Japan</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Kilchoman</th>
+                        <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Balvienie</th>
+                        <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Santori</th>
+                        <td>Japan</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </article>
 </body>
 </html>
