--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
     <title>Whiskey drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/66847348c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
@@ -23,6 +24,13 @@
     </nav>
     <article class="container mt-3">
     <!--Callout-->
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+                <div class="alert alert-warning">
+                    <strong>Sale Now On !</strong> We have got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <section class="callout jumbotron text-center">
@@ -47,16 +55,30 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I've been introduced to more than 10 great interational whiskeys I have never even knew about !</p>
-                        <p>- Jan Kwiatkowski</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I've been introduced to more than 10 great interational whiskeys I have never even knew about !</p>
+                                <p>- Jan Kwiatkowski</p>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6"> 
-                    <blockquote class="blockquote">
-                        <p>I haven't been sober for months :) </p>
-                        <p>- Bartosz M</p>
-                    </blockquote>
+                <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I haven't been sober for months :) </p>
+                                <p>- Bartosz M</p>
+                            </blockquote>
+                        </div>    
+                    </div>
                 </div>
             </div>
     <!--/Quotes-->
@@ -72,21 +94,21 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 1</h3>
+                        <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                         <p>dupa dupa dupa fiutek dupa gowno i faflusniaki</p>
                         <p><a class="btn btn-sm bt-light" href="">Read More!</a></p>
                     </div>
                 </div> 
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
-                        <h3>Feature 2</h3>
+                        <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
                         <p>trzeba bylo juz dawno zaczac uczyc sie pisania na klawiaturze bez patrzenia i we wlasciwy sposob</p>
                         <p><a class="btn btn-sm bt-light" href="">Read More!</a></p>
                     </div>
                 </div> 
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 3</h3>
+                        <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
                         <p>tak wlasnie sobie to wyglada. czasem kropka, czasem przecinek entliczek pentliczek i bajerka</p>
                         <p><a class="btn btn-sm bt-light" href="">Read More!</a></p>
                     </div>
