--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/66847348c2.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 <!--navbar-->
@@ -42,7 +44,7 @@
         </div>
     </nav>
 <!--navbar-->
-    <article class="container mt-3">
+    <div class="container-fluid alert-container">
     <!--Callout-->
         <div class="row d-none d-sm-block">
             <div class="col-12">
@@ -51,6 +53,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid callout-container">
         <div class="row">
             <div class="col-12">
                 <section class="callout jumbotron text-center">
@@ -59,14 +63,16 @@
                         <s class="d-none d-sm-inline">£19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>Free first order!</mark></strong></p>
-                    <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
+                    <button class="btn btn-success btn-lg callout-btn" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
                     <p class="text-muted"><small>You must be 18 or over to sign up for our service. Please drink responsibly.</small></p>
                 </section>
             </div>
         </div>
+    </div>
     <!--/Callout-->
         <hr>
-    <!--Quotes-->    
+    <!--Quotes--> 
+    <div class="container-fluid quotes-container">   
         <section class="quotes">
             <div class="row">
                 <div class="col-12 my-5">  
@@ -103,8 +109,10 @@
             </div>
     <!--/Quotes-->
         </section>
+    </div>
         <hr>
     <!--Features-->
+    <div class="container-fluid fearures-container">
         <section class="feature">
             <div class="row">
                 <div class="col-12 my-5">
@@ -135,42 +143,8 @@
                 </div> 
             </div>
         </section>
-    <!--/features-->
-        <section>
-            <h2>Monthly favourites</h2>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Origin</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">McOwski</th>
-                        <td>Poland</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Hibiki</th>
-                        <td>Japan</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Kilchoman</th>
-                        <td>Scotland</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Balvienie</th>
-                        <td>Scotland</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Santori</th>
-                        <td>Japan</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </article>
-
+    </div>
+    <!--/features-->    
     <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
         <div class="modal-dialog">
             <div class="modal-content">
